#2401 [Fixed] Image: Large image overflows container

--- a/packages/dso-toolkit/src/components/card/card.scss
+++ b/packages/dso-toolkit/src/components/card/card.scss
@@ -119,6 +119,7 @@ dso-card {
     display: flex;
     height: units.$u3;
     width: units.$u3;
+    max-inline-size: unset;
   }
 
   &.dso-wide-image img,
